--- a/config/config.yaml
+++ b/config/config.yaml
@@ -15,4 +15,9 @@ hyper_params:
   val_batch_size: 32
   max_epochs: 100
   min_epochs: 5
+  weighted_loss: False
 
+base_path: ???
+
+hydra:
+  output_subdir: config
