linear layer size testing with activation

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -7,14 +7,15 @@ dataset:
 
 model_name: menakbert_y1
 hyper_params:
-  lr: 0.00001
-  dropout: 0.1
+  lr: 1e-5
+  dropout: 0.3
   gradient_accumilation: 1
   train_batch_size: 32
   val_batch_size: 32
-  max_epochs: 1
-  min_epochs: 1
+  max_epochs: 50
+  min_epochs: 5
   weighted_loss: False
+  linear_layer_size: 1024
 
 base_path: ???
 
